# lux

./: .gitignore  Cargo.toml  Justfile  README.md  install.sh  renovate.json  setup.sh
.claude/: commit-checks.sh
.github/workflows/: ci.yml  hf-model-card.yml  recipe-tests.yml  release.yml  vm-tests.yml
bench/: RESULTS.md  real_world_tests.md  run_bench.py  scenarios.json  tools.json
bench/results/: 001-baseline-qwen3-1.7b.md  002-lora-v1-qwen3-1.7b.md
crates/lux-agent/: Cargo.toml
crates/lux-agent/src/: intent.rs  lib.rs
crates/lux-cli/: Cargo.toml
crates/lux-cli/src/: main.rs  portable.rs
crates/lux-knowledge/: Cargo.toml
crates/lux-knowledge/recipes/: ai-dev-cpu.yaml  ai-dev-cuda.yaml  browser-chromium.yaml  editor-sublime.yaml  editor-vscodium.yaml  editor-zed.yaml  ghostty-default.yaml  zoom.yaml  zsh-popular.yaml
crates/lux-knowledge/src/: lib.rs  recipe.rs  registry.rs
crates/lux-llm/: Cargo.toml
crates/lux-llm/src/: lib.rs  ollama.rs  openai.rs
crates/lux-tools/: Cargo.toml
crates/lux-tools/src/: bootc.rs  disk.rs  firewall.rs  flatpak.rs  lib.rs  logs.rs  network.rs  package.rs  recipes.rs  service.rs  shell.rs  sysinfo.rs  update.rs
crates/luxd/: Cargo.toml
crates/luxd/src/: config.rs  main.rs
crates/luxd/src/detectors/: avc.rs  disk.rs  mod.rs  units.rs
docs/: hf-model-card-lux.md  hf-model-card-portable.md  hf-model-card.md  portable-readme.md
docs/design/: recipes.md
finetune/: README.md  create_ollama_model.sh  dataset.jsonl  train.py
systemd/: luxd.service
tests/vm/: README.md  run.sh
tests/vm/bootc/: Containerfile
tests/vm/cloud-init/: meta-data  user-data.tmpl
tests/vm/lib/: boot.sh  fetch-image.sh  ssh.sh  wait-ssh.sh
tests/vm/scenarios/: 00-sysinfo.sh  10-install-htop.sh  11-install-firefox.sh  20-firewall-block-ip.sh  21-firewall-remove-ip.sh  30-service-restart.sh  40-logs-read.sh  50-luxd-failed-unit.sh  51-luxd-default-config.sh  52-luxd-systemd-service.sh  70-bootc-status.sh
