[workspace]
members = [
    "crates/luxd",
    "crates/lux-cli",
    "crates/lux-agent",
    "crates/lux-tools",
    "crates/lux-llm",
    "crates/lux-knowledge",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/lux-linux/lux"
description = "AI agent for Linux desktop"

[workspace.dependencies]
lux-agent = { path = "crates/lux-agent" }
lux-tools = { path = "crates/lux-tools" }
lux-llm = { path = "crates/lux-llm" }
lux-knowledge = { path = "crates/lux-knowledge" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
trait-variant = "0.1"
