[package]
name = "lux-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI agent core - tool calling loop and conversation management"

[dependencies]
lux-llm.workspace = true
lux-tools.workspace = true
lux-knowledge.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
