[package]
name = "lux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "lux CLI - AI agent for Linux desktop"

[dependencies]
lux-agent.workspace = true
lux-llm.workspace = true
lux-tools.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
libc = "0.2"
