[package]
name = "lux-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM inference backend for lux (llama.cpp)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
trait-variant.workspace = true
