[package]
name = "lux-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System tools for lux agent (bootc, dnf, systemctl, flatpak, etc.)"

[dependencies]
lux-llm.workspace = true
anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
